# cubana

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_shaders.bat  compile_shaders.sh
cmake/: CopyAssets.cmake  FileBaseNameUtil.cmake  ImGuiColorTextEdit.cmake
scripts/: enemy.lua  level1.lua  player.lua
scripts/core/: events.lua  im3d.lua  imgui.lua  log.lua
scripts/core/cpml/: bound3.lua  color.lua  mat4.lua  quat.lua  utils.lua  vec2.lua  vec3.lua
shaders/: im3d.glsl  im3d.lines.frag.spv  im3d.lines.geom.spv  im3d.lines.vert.spv  im3d.points.frag.spv  im3d.points.vert.spv  im3d.triangles.frag.spv  im3d.triangles.vert.spv  imgui_shader.vert  imgui_shader.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: CMakeLists.txt  app.c  app.h  argparser.c  argparser.h  buffer.c  buffer.h  cimgui_wrappers.c  cimgui_wrappers.h  collision.c  collision.h  console.c  console.h  culibc.c  culibc.h  entity.c  entity.h  error.c  error.h  errorcodes.c  errorcodes.h  event.c  event.h  external.c  external.h  file.c  file.h  game.c  game.h  gamepad.c  gamepad.h  input.c  input.h  level_loader.c  level_loader.h  main.c  physics.c  physics.h  platform.c  platform.h  (+15 more)
src/log/: log.c  log.h
src/math/: constants.h  mat.c  mat.h  qat.c  qat.h  scalar.c  scalar.h  scalar_impl.c  scalar_impl.h  vec.c  vec.h
src/memory/: arena.c  arena.h  linearallocator.c  linearallocator.h  stackallocator.c  stackallocator.h  thread_scratch.c  thread_scratch.h
src/os/: crash_handler.h  crash_handler_generic.cpp  crash_handler_win32.cpp  os_error.h  os_error_linux.c  os_error_win32.c  os_memory.h  os_memory_linux.c  os_memory_win32.c  os_thread.h  os_thread_linux.c  os_thread_win32.c
src/renderer/: colours.h  i3integration.c  i3integration.h  igintegration.c  igintegration.h  imfont_storage.c  imfont_storage.h  renderer.c  renderer.h  renderervk.c  renderervk.h  vkhelper.c  vkhelper.h
src/script/: imgui_functions.inl  imgui_lua.cpp  imgui_lua.h  imgui_registrar.cpp  imgui_registrar.h  scripting.c  scriptreg.c  scriptreg.h  world_lua.c  world_lua.h
src/ui/: cld_parser.c  cld_parser.h  scripteditor.cpp  scripteditor.h  texteditor.cpp  texteditor.h  ui.c  ui.h
test/: CMakeLists.txt  test_test.c
tools/: analyze_functions.json.py  enums.json  functions.json  functions_to_gen.txt  gen_json_def.py  gen_lua_doc.py  gen_lua_wrappers.py  generate_imgui_bindings.pl
